--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="language" content="English">
   <meta name="author" content="Harry He">
   <meta name="web_author" content="Harry He">
-  <meta name="description" content="I am Harry He 21, a Sociology + History Major at Swarthmore College, PA. I am from Canton, China,
+  <meta name="description" content="I am Harry He 21, a Sociology&History Major at Swarthmore College, PA. I am from Canton, China,
   but I travel around the globe and use IP addresses from everywhere.">
   <meta name="keywords" content="Harry He, Swarthmore College, History, Sociology, Canton China, travel, language">
   <meta name="robots" content="index, follow">
