--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="flexContainer">
         <img class="portrait" src="portrait.png">
         <div class="textWrapper">
-          <p><b>👋 Greetings!</b></p>
+          <p><b> Greetings!</b></p>
           <p> I am <b>Harry He 21'</b>, a Sociology + History Major at Swarthmore College, PA. I am from Canton, China,
             but I travel around the globe and use IP addresses from everywhere. </p>
         </div>
@@ -63,9 +63,11 @@
 
     <div class="contentContainer">
       <h3>About Me</h3>
-      <p>Quantitative method, spacial analysis, and power structure are his major interests, while he is equally
+      <p>He is interested in Quantitative methods, spatial analysis, and power structure, while he is equally
         passionate about the intellectual and economic history of East Asia and the Mediterranean world.</p>
-      <p>He knows Mandarin, Cantonese, English, some Italiano, Arabic, and Mongolian languages.</p>
+      <p>He knows Mandarin, Cantonese, English, some Italiano, Arabic, and Mongolian.</p>
+      <p>He loves music 🎵, civil aviation✈️, and all kinds of cats🐱. </p>
+      
     </div>
 
     <div class="contentContainer">
@@ -89,6 +91,7 @@
 
     <div class="footer">
       <p>© Harry He 2018</p>
+      <p>Felix, qui potuit rerum cognoscere causas<p>
     </div>
 
   </div>
