--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     </div>
 
     <div class="footer">
-      <p>© Harry He 2018</p>
-      <p> Felix, qui potuit rerum cognoscere causas<p>
+      <p> © Harry He, Swarthmore Lib-Lab 2018.
+        Felix, qui potuit rerum cognoscere causas<p>
     </div>
 
   </div>
